fixed gap after last image

--- a/app/assets/stylesheets/pages/_recipes.scss
+++ b/app/assets/stylesheets/pages/_recipes.scss
@@ -2,11 +2,16 @@
   display: flex;
 }
 
+
 .dish-image-wrapper {
   height: 85vh;
   flex-grow: 1;
   width: 100vw;
-  padding-right: 5px;
+  &:last-child {
+    .dish-image {
+      box-shadow: none;
+    }
+  }
 }
 
 .recipe-card {
@@ -17,14 +22,18 @@
   background-position: center;
   background-size: cover;
   height: 100%;
+  box-shadow: inset -5px 0 0 rgba(255,255,255,1);
+
 }
+
+
 
 // Information Card details below
 
 .info-card {
   display: flex;
   justify-content: space-between;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.8);
   border: 1.5px solid #007d82;
   border-radius: 10px 10px 0px 0px;
   width: 85vw;
@@ -67,7 +76,7 @@
   border-radius: 30px 0px 30px 0px;
   height: 215px;
   width: 215px;
-  margin: 10px;
+  margin: 10px 0px 0px 10px;
   border: 1.5px solid #007d82;
 }
 
